--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="Cesium2.html">Jelajahi Model BIM</a>
+      <a class="btn-getstarted" href="cesium_3.html">Jelajahi Model BIM</a>
 
     </div>
   </header>
@@ -87,7 +87,7 @@
               </p>
 
               <div class="hero-buttons">
-                <a href="Cesium.html" class="btn btn-primary me-0 me-sm-2 mx-1">Jelajahi Model BIM</a>
+                <a href="Cesium_3.html" class="btn btn-primary me-0 me-sm-2 mx-1">Jelajahi Model BIM</a>
               </div>
             </div>
           </div>
