--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 </p>
                 <ul>
                   <li><i class="bi bi-check2-all"></i> <span>Total bediri alat 29 kali</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>2 kali berdiri metode Free Scan</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>27 kali berdiri metode Free Scan</span></li>
                   <li><i class="bi bi-check2-all"></i> <span>2 kali berdiri metode backsight</span></li>
                   <li><i class="bi bi-check2-all"></i> <span>6 kali akuisisi dibagian atas jembatan</span></li>
                   <li><i class="bi bi-check2-all"></i> <span>23 kali akuisisi dibagian bawah jembatan</span></li>
@@ -339,7 +339,7 @@
                 <img src="assets/img/asbuild1_pages-to-jpg-0001.jpg" alt="" class="img-fluid" style="border-radius: 30px 10px;">
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
-                <img src="assets/img/GNSS.jpg" alt="" class="img-fluid" style="border-radius: 30px 10px;">
+                <img src="assets/img/asbuild2.jpg" alt="" class="img-fluid" style="border-radius: 30px 10px;">
               </div>
             </div>
           </div><!-- End tab content item -->
@@ -386,20 +386,13 @@
           <div class="tab-pane fade" id="features-tab-7">
             <div class="row">
               <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
-                <h3>Neque exercitationem debitis</h3>
+                <h3>Poster Hasil PRGG</h3>
                 <p class="fst-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua.
+                  Poster yang menjelaskan hasil akhir dari PRGG Kelompok 14, berisi informasi singkat mengenai jembatan, data yang digunakan, langkah kerja, dan hasil akhir yang didapat.
                 </p>
-                <ul>
-                  <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span></li>
-                </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
-                <img src="assets/img/GNSS.jpg" alt="" class="img-fluid" style="border-radius: 30px 10px;">
+                <img src="assets/img/poster_.jpg" alt="" class="img-fluid" style="border-radius: 30px 10px;">
               </div>
             </div>
           </div>
