nambahin foto anggota

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 
           <div class="col-xl-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
             <div class="feature-box orange">
-              <img src="assets/img/people.jpg" alt="" class="img-fluid" style="border-radius: 30px 10px;">
+              <img src="assets/img/Muhammad Nawal Firjatullah_ADVO.JPG" alt="" class="img-fluid" style="border-radius: 30px 10px;">
               <h4>M. Nawal Fijratullah</h4>  
               <p>21/479129/TK/52811</p>
               <p>Teknik Geodesi</p>
@@ -467,7 +467,7 @@
 
           <div class="col-xl-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="feature-box blue">
-              <img src="assets/img/people.jpg" alt="" class="img-fluid" style="border-radius: 30px 10px;">
+              <img src="assets/img/Tri Kurniawan_KWU.JPG" alt="" class="img-fluid" style="border-radius: 30px 10px;">
               <h4>Tri Kurniawan</h4>
               <p>21/482456/TK/53286</p>
               <p>Teknik Geodesi</p>
@@ -476,7 +476,7 @@
 
           <div class="col-xl-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="feature-box green">
-              <img src="assets/img/people.jpg" alt="" class="img-fluid" style="border-radius: 30px 10px;">
+              <img src="assets/img/2021_hani nikmah safira_01.JPG" alt="" class="img-fluid" style="border-radius: 30px 10px;">
               <h4>Hani Nikmah Syafira</h4>
               <p>21/474839/TK/52403</p>
               <p>Teknik Geodesi</p>
@@ -485,7 +485,7 @@
 
           <div class="col-xl-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="feature-box red">
-              <img src="assets/img/people.jpg" alt="" class="img-fluid" style="border-radius: 30px 10px;">
+              <img src="assets/img/kimi.jpg" alt="" class="img-fluid" style="border-radius: 30px 10px;">
               <h4>M. Rafi Hakimi</h4>
               <p>21/479315/TK/52862</p>
               <p>Teknik Geodesi</p>
