--- a/cesium_3.html
+++ b/cesium_3.html
@@ -184,10 +184,10 @@ try {
 
       function flyToJem() {
         viewer.camera.flyTo({
-          destination: Cesium.Cartesian3.fromDegrees(110.37075000, -7.76370833, 170), // Longitude, Latitude, Height
+          destination: Cesium.Cartesian3.fromDegrees(110.370836, -7.763631, 250), // Longitude, Latitude, Height
           orientation: {
-            heading: Cesium.Math.toRadians(356.0),
-            pitch: Cesium.Math.toRadians(0.0),
+            heading: Cesium.Math.toRadians(0),
+            pitch: Cesium.Math.toRadians(-30),
             roll: 0.0,
           },
         });
